--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 
 	
-	"discordSecret": "put-discord-secret-here",
+	"discordSecret": "NTIxOTg1NjA2MDA4NTY5ODU3.DvEYow.ODLx1n4j12BTyCAgYP6WHl3rhso",
 	"twitchSecret": "put-twitch-secret-here",
 
 
